--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "autoprefixer": "^10.4.16",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "jquery": "^3.7.1",
+    "jquery-ujs": "^1.2.3",
     "nodemon": "^3.0.1",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
