--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
     "sass": "^1.69.4",
+    "select2": "^4.1.0-rc.0",
+    "select2-bootstrap-5-theme": "^1.3.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
